[gd_scene load_steps=12 format=2]

[ext_resource path="res://Textures/UI/panel.tres" type="StyleBox" id=1]
[ext_resource path="res://Textures/SplashScreen/solid_white.png" type="Texture" id=2]
[ext_resource path="res://Scenes/CharacterCreation/character_creation.gd" type="Script" id=3]
[ext_resource path="res://Fonts/thaelahfat_pure_16x.tres" type="DynamicFont" id=4]
[ext_resource path="res://Textures/UI/button_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://Textures/UI/button_disabled.tres" type="StyleBox" id=6]
[ext_resource path="res://Textures/UI/button_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://Textures/UI/button_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://Textures/UI/input_normal.png" type="Texture" id=9]
[ext_resource path="res://Textures/UI/input_icon_reset_normal.png" type="Texture" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 24.0
margin_right = 24.0
margin_top = 8.0
margin_bottom = 8.0

[node name="CharacterCreation" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="UI"]
self_modulate = Color( 0.0941176, 0.47451, 0.623529, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -40.0
margin_right = -13.0
margin_bottom = -13.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -112.0
margin_top = 16.0
margin_right = -12.9999
margin_bottom = 43.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.24
margin_top = -54.1422
margin_right = 101.76
margin_bottom = 43.8578
custom_styles/panel = ExtResource( 1 )
hide_on_state_item_selection = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmText" type="Label" parent="UI/PopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 15.1305
margin_right = -20.0
margin_bottom = -44.8695
custom_fonts/font = ExtResource( 4 )
text = "Are you sure?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PopupMenu"]
anchor_left = 0.1
anchor_top = 0.551
anchor_right = 0.9
anchor_bottom = 0.827
margin_left = 1.90735e-06
margin_top = 0.0233536
margin_right = 1.52588e-05
margin_bottom = -0.0246506
custom_constants/separation = -172
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="UI/PopupMenu/HBoxContainer"]
margin_left = 108.0
margin_right = 171.0
margin_bottom = 27.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Confirm"

[node name="CancelButton" type="Button" parent="UI/PopupMenu/HBoxContainer"]
margin_left = -1.0
margin_right = 59.0
margin_bottom = 27.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="UI"]
anchor_left = 0.5
anchor_top = 0.023
anchor_right = 0.5
anchor_bottom = 0.023
margin_left = -88.0
margin_top = 7.72
margin_right = 98.0
margin_bottom = 47.72
custom_icons/clear = ExtResource( 10 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 4 )
max_length = 16
expand_to_text_length = true
context_menu_enabled = false
clear_button_enabled = true
right_icon = ExtResource( 10 )
placeholder_text = "Name here"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="UI/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="UI/PopupMenu/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="UI/PopupMenu/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
